--- a/css/components/card.css
+++ b/css/components/card.css
@@ -8,6 +8,7 @@
 	margin: 10px;
 	flex-basis: 250px;
 	flex-grow: 1;
+	background-color: white;
 
 }
 
@@ -27,5 +28,7 @@
 .cards {
 	display: flex;
 	flex-wrap: wrap;
+	
+
 }
 
